# Chemgen

./: .gitignore  .gitmodules  README.md  chemistry.py  coef_m.f90  compare_mini_apps_write_csv.sh  compile_mini_apps.sh  constants.h  generate_chemistry.py  generate_mini_apps.sh  generate_mini_apps_all_mechs.sh  parser.py  performance_table_mini_apps_H2_burke.csv  plot_omp_speedup.py  plot_omp_speedup.sh  recast_getrate_v2.py  test.py  write_constants.py  writer.py  writer_utils.py
chemgen/: chemistry.py  chemistry_nn.py  constants.py  parser.py  write_constants.py  writer_utils.py
chemgen/templates/: chemgen_mod.j2  chemistry_mini_app.j2  exp_g.j2  exp_g_ftn.j2  exp_g_ftn_vec.j2  exp_g_vec.j2  ftn_header.j2  python_header.j2  ytoc.j2  ytoc_ftn.j2  ytoc_ftn_vec.j2  ytoc_vec.j2
chemgen/templates/reactions/: plog.j2  standard.j2  third_body.j2  troe.j2
chemgen/templates/reactions_ftn/: plog.j2  standard.j2  third_body.j2  troe.j2
chemgen/templates/reactions_ftn_vec/: plog.j2  standard.j2  third_body.j2  troe.j2
chemgen/templates/reactions_hip/: device_functions_h.j2  hip_v1_cpp.j2  hip_v1_h.j2  hip_v2_cpp.j2  hip_v2_h.j2  hip_v3_cpp.j2  hip_v3_h.j2  hip_v4_cpp.j2  hip_v4_h.j2
chemgen/templates/reactions_omp_gpu/: exp_g.j2  plog.j2  standard.j2  third_body.j2  troe.j2  ytoc.j2
chemgen/templates/reactions_vectorised/: plog.j2  standard.j2  third_body.j2  troe.j2
ck_files/C4_compounds/Aramco 1.3/: chem.yaml
ck_files/C4_compounds/Aramco 2.0/: chem.yaml
ck_files/C4_compounds/Aramco 3.0/: chem.yaml
ck_files/C4_compounds/USCMechII/: chem.yaml
ck_files/CH4_Methane/FFCM-1/: chem.yaml
ck_files/CH4_Methane/GRI30/: chem.yaml
ck_files/GRI30/: chem.yaml
ck_files/H2_burke/: chem.inp  chem.yaml  chem_without_CO_CO2_AR_HE.inp  chem_without_CO_CO2_AR_HE.yaml
ck_files/HyChem/C1/skeletal/: chem.yaml
ck_files/Hydrogen_H2/Burke_et_al_2012/: chem.yaml
ck_files/Hydrogen_H2/Konnov2008/: chem.yaml
ck_files/Hydrogen_H2/Li_Juan_2004/: chem.yaml
ck_files/JetSurf/2.0/: chem.yaml
ck_files/i-Octane_C8H18/llnl_version3/: chem.yaml
ck_files/methane_NUI/: chem.ske50.inp  chem.ske50.yaml  chem.ske50_R1_R6_dup_fix.inp  chem.yaml
ck_files/n-Heptane_C7H16/Lu_sk68/: chem.yaml
mini_app/: CMakeLists.txt
older_scripts/: add_species_and_reactions.py  recast_getrates.py  recast_utils.py
post_scripts/: create_yaml.py  mech_stats.json  plot_mechs.py
tests/: conftest.py  test.py  test_getrates.py
tests/create_gpu_constants/: copy_constants.cpp  test.py
tests/write_getrates/: compile_options.sh  getrates.f  getrates.py  getrates_i.f  getrates_i.py  getrates_ref.f  test_getrates.py  test_getrates_omp_gpu.f90  write_getrates.py
(+13 files in other folders)
